--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "joinmate2-backend",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "",
   "author": "",
   "private": true,
@@ -27,6 +27,7 @@
     "@nestjs/mapped-types": "^1.1.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-socket.io": "^9.0.11",
+    "@nestjs/swagger": "^6.1.0",
     "@nestjs/typeorm": "^9.0.1",
     "@nestjs/websockets": "^9.0.11",
     "bcrypt": "^5.0.1",
