--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,6 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
   },
-  "typescript.preferences.importModuleSpecifier": "relative"
+  "typescript.preferences.importModuleSpecifier": "relative",
+  "include": ["src/**/*", "tests/**/*"]
 }
